WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168277
worker.postMessage should throw a TypeError if a SharedArrayBuffer is in the transfer list
https://bugs.webkit.org/show_bug.cgi?id=168277
Summary
worker.postMessage should throw a TypeError if a SharedArrayBuffer is in the ...
Filip Pizlo
Reported
2017-02-13 21:39:09 PST
Patch forthcoming.
Attachments
the patch
(10.10 KB, patch)
2017-02-13 21:42 PST
,
Filip Pizlo
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-02-13 21:42:25 PST
Created
attachment 301449
[details]
the patch
Mark Lam
Comment 2
2017-02-13 21:47:51 PST
Comment on
attachment 301449
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=301449&action=review
r=me
> Source/WebCore/ChangeLog:10 > + This is a simple spec compliance change. The title says it all.
Would be nice to add the url to the relevant spec (if you have it) for future reference.
Filip Pizlo
Comment 3
2017-02-14 09:07:34 PST
(In reply to
comment #2
)
> Comment on
attachment 301449
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=301449&action=review
> > r=me > > > Source/WebCore/ChangeLog:10 > > + This is a simple spec compliance change. The title says it all. > > Would be nice to add the url to the relevant spec (if you have it) for > future reference.
I wish I knew. This is non-normative in the SharedArrayBuffer spec itself; in fact it doesn't mention a transfer list at all and refers to the fact that there is "general agreement" about how it should work. Somewhere else there is a discussion that led to the current consensus, but I'm having a hard time finding it. It was probably on github.
Filip Pizlo
Comment 4
2017-02-14 09:10:25 PST
Landed in
https://trac.webkit.org/changeset/212301
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug