LayoutTests/workers/sab/sab-creator-transfer.js
@@ -1,4 +1,0 @@
-var sab = new SharedArrayBuffer(100 * 4);
-var memory = new Int32Array(sab);
-postMessage(memory, [sab]);
-
